--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = stray
-version = 0.0.1
+version = 0.0.3
 author = Stray Robots
 author_email = hello@strayrobots.io
 description = Stray SDK
@@ -16,7 +16,7 @@ classifiers =
 
 [options]
 package_dir =
-    = stray
+    = src
 packages = find:
 python_requires = >=3.6
 install_requires = 
@@ -30,4 +30,4 @@ install_requires =
     opencv-python
 
 [options.packages.find]
-where = stray
+where = src
