--- a/setup.cfg
+++ b/setup.cfg
@@ -20,11 +20,13 @@ package_dir =
 packages = find:
 python_requires = >=3.8
 install_requires = 
+    torch
     numpy
     trimesh
     scipy
     pillow
     scikit-video
+    scikit-spatial
     pycocotools
     open3d
     opencv-python
