--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@ name = stray
 version = 0.0.7
 author = Stray Robots
 author_email = hello@strayrobots.io
-description = Stray SDK
+description = Stray SDKa
 long_description = file: README.md
 long_description_content_type = text/markdown
 url = https://github.com/StrayRobots/stray
@@ -31,6 +31,14 @@ install_requires =
     open3d
     opencv-python
     pytorch_lightning
+    click
 
 [options.packages.find]
 where = src
+
+
+[options.entry_points]
+console_scripts =
+    stray-import = stray.scripts.dataset_import:main
+    stray-export = stray.scripts.dataset_export:main
+    stray-show = stray.scripts.show:main
