--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@ name = stray
 version = 0.0.8
 author = Stray Robots
 author_email = hello@strayrobots.io
-description = Stray SDKa
+description = Stray SDK
 long_description = file: README.md
 long_description_content_type = text/markdown
 url = https://github.com/StrayRobots/stray
