Keep small depth frames when importing

--- a/setup.cfg
+++ b/setup.cfg
@@ -19,7 +19,7 @@ package_dir =
     = src
 packages = find:
 python_requires = >=3.8
-install_requires = 
+install_requires =
     torch
     numpy
     trimesh
@@ -32,6 +32,7 @@ install_requires =
     opencv-python
     pytorch_lightning
     click
+    tqdm
 
 [options.packages.find]
 where = src
